test/fails/bad_generics/core4.lgl
`u app_mat<`t : vec, `u : vec>(`t->`u m, t x) {
    return m * x;
}

void main() {
    int fail = app_mat<vec2, int>([[1., 2.], [2., 1.]], [1., 2]);
}